[package]
name = "aoc-2022"
version = "0.1.0"
edition = "2021"

[lib]
name = "aoc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[[bench]]
name = "complete"
harness = false

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }
paste = "1.0.9"

[dependencies]
owo-colors = "3.5.0"
rayon = "1.6.1"
rustc-hash = "1.1.0"
lexical = "6.1.1"
crossterm = "0.25.0"

[features]
rayon = []
visualize = []